fixed gaps again

--- a/src/views/styles/registrationpage.css
+++ b/src/views/styles/registrationpage.css
@@ -23,7 +23,7 @@ body {
 .form-box {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 5px;
 }
 
 .input-field {
